samples/_failures_safe/1761377765_b63f8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b96b6a38.c: In function ‘handle_event’:
./samples/SAFE/__tmp_b96b6a38.c:139:17: error: expected expression at end of input
  139 |                 if (event == EVENT_PROCESS) sm->current_state =
      |                 ^~
./samples/SAFE/__tmp_b96b6a38.c:139:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b96b6a38.c:139:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b96b6a38.c:139:17: error: expected declaration or statement at end of input
